Call NSApplicationLoad() to initialize Cocoa even in Carbon builds because if anyone uses Cocoa without it being called (other components or plugins), the app goes crazy. b=337334 r=mento